Minijax version 0.1.4 (#3345)
Updates:
 * Now using Undertow instead of Jetty
 * Enabled Eclipselink static weaving
 * Enabled Jackson Afterburner module
 * Added JVM performance settings to setup.sh
# Conflicts:
#	frameworks/Java/minijax/setup.sh